k8s/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cerberus-gateway
  namespace: default
  labels:
    gateway.networking.k8s.io/gateway-name: cerberus-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "localhost"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
